testsuite/tests/saks/should_fail/saks_fail009.stderr

saks_fail009.hs:9:1: error:
    • Expecting one more argument to ‘k’
      Expected a type, but ‘k’ has kind ‘* -> *’
    • In the data type declaration for ‘T’
